--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,12 +5,18 @@
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="10"/>
     <application android:label="@string/app_name">
-        <activity android:name="ControlActivity"
+        <activity android:name=".LocationMonitorAction"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <!--TODO permissions: gps, network, probably any others-->
+        <!--TODO intent filter for call from another process?-->
+        <!--TODO android:exported ? -->
+        <service android:name=".LocationMonitorService"
+                 android:label="locationService"
+        />
     </application>
 </manifest> 
