--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,18 +5,21 @@
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="10"/>
     <application android:label="@string/app_name">
+        <!--TODO permissions: gps, network, probably any others-->
         <activity android:name=".LocationMonitorAction"
-                  android:label="@string/app_name">
+        android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <!--TODO permissions: gps, network, probably any others-->
-        <!--TODO intent filter for call from another process?-->
-        <!--TODO android:exported ? -->
         <service android:name=".LocationMonitorService"
                  android:label="locationService"
-        />
+                 android:exported="false"
+                 android:process=":LocationMonitorService">
+            <intent-filter>
+                <action android:name="ru.spb.cupchinolabs.androidlocator.LocationMonitorService"/>
+            </intent-filter>
+        </service>
     </application>
 </manifest> 
