--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,8 +7,12 @@
     <application android:label="@string/app_name">
         <!--TODO permissions: gps, network, probably any others-->
         <activity android:name=".LocationMonitorAction"
-        android:label="@string/app_name">
-            <intent-filter>
+                  android:label="@string/app_name"
+                  android:launchMode="singleTask"
+                  android:allowTaskReparenting="true"
+                  android:theme="@android:style/Theme.Light"
+                >
+        <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
