--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,6 +11,7 @@
                   android:launchMode="singleTask"
                   android:allowTaskReparenting="true"
                   android:theme="@android:style/Theme.Light"
+                  android:clearTaskOnLaunch="true"
                 >
         <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
