--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,9 +4,10 @@
           android:versionCode="1"
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="10"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <application android:label="@string/app_name">
         <!--TODO permissions: gps, network, probably any others-->
-        <activity android:name=".LocationMonitorAction"
+        <activity android:name=".LocationMonitorActivity"
                   android:label="@string/app_name"
                   android:launchMode="singleTask"
                   android:allowTaskReparenting="true"
