--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,9 +4,10 @@
           android:versionCode="1"
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="10"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <!--<uses-permission android:name="android.permission.INTERNET"/>-->
+    <!--<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>-->
     <application android:label="@string/app_name">
-        <!--TODO permissions: gps, network, probably any others-->
         <activity android:name=".LocationMonitorActivity"
                   android:label="@string/app_name"
                   android:launchMode="singleTask"
@@ -14,13 +15,13 @@
                   android:theme="@android:style/Theme.Black"
                   android:clearTaskOnLaunch="true"
                 >
-        <intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <service android:name=".LocationMonitorService"
-                 android:label="locationService"
+                 android:label="locationMonitorService"
                  android:exported="false"
                  android:process=":LocationMonitorService">
             <intent-filter>
