--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,13 +20,25 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".ViewerActivity"
+                  android:label="@string/app_name">
+        </activity>
         <service android:name=".LocatorService"
                  android:label="locatorService"
                  android:exported="false"
-                 android:process=":LocatorService">
+                 android:process=":LocatorService"
+                >
             <intent-filter>
                 <action android:name="ru.spb.cupchinolabs.androidlocator.LocatorService"/>
             </intent-filter>
         </service>
+        <provider android:name=".LocatorProvider"
+                  android:authorities="ru.spb.cupchinolabs.androidlocator.provider"
+                  android:exported="false"
+                >
+            <!--TODO take care of permission for internal components and external apps once exported="true"-->
+            <!--android:readPermission="ru.spb.cupchinolabs.androidlocator.provider.permission.READ_PROVIDER"-->
+            <!--android:writePermission="ru.spb.cupchinolabs.androidlocator.provider.permission.WRITE_PROVIDER"-->
+        </provider>
     </application>
 </manifest> 
