--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,7 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ViewerActivity"
+        <activity android:name=".ViewerListActivity"
                   android:label="@string/app_name">
         </activity>
         <service android:name=".LocatorService"
