--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,8 +7,8 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <permission android:name="ru.spb.cupchinolabs.androidlocator.provider.permission.READ_PROVIDER"/>
     <permission android:name="ru.spb.cupchinolabs.androidlocator.provider.permission.WRITE_PROVIDER"/>
-    <!--<uses-permission android:name="android.permission.INTERNET"/>-->
-    <!--<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>-->
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="ru.spb.cupchinolabs.androidlocator.provider.permission.READ_PROVIDER"/>
     <uses-permission android:name="ru.spb.cupchinolabs.androidlocator.provider.permission.WRITE_PROVIDER"/>
     <application android:label="@string/app_name">
