--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,11 +4,15 @@
           android:versionCode="1"
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="10"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <permission android:name="ru.spb.cupchinolabs.androidlocator.provider.permission.READ_PROVIDER"/>
     <permission android:name="ru.spb.cupchinolabs.androidlocator.provider.permission.WRITE_PROVIDER"/>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="ru.spb.cupchinolabs.androidlocator.provider.permission.READ_PROVIDER"/>
     <uses-permission android:name="ru.spb.cupchinolabs.androidlocator.provider.permission.WRITE_PROVIDER"/>
     <application android:label="@string/app_name">
